# Multi-Renamer

./: .gitignore  NativeRenamerCore.swift  README.md  WingSnapWavRenamerNativeApp.swift  build_native_macos_app.sh  build_release_dmg.sh  fetch_release_asset_downloads.py  wing_snap_wav_renamer.py  wing_snap_wav_renamer_codex_instructions.md
.github/workflows/: build-electron.yml  build-windows-native.yml  fetch_release_download_counts.yml  your_workflow.yml
electron-app/: package-lock.json  package.json
electron-app/src/: main.js  preload.js  renamer-core.js
electron-app/src/renderer/: app.js  index.html  styles.css
electron-app/test/: renamer-core.test.js
electron-app/test/fixtures/: test.snap
windows-native/WingMultitrackRenamer.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WingMultitrackRenamer.Windows.csproj
windows-native/WingMultitrackRenamer.Windows/Models/: PlanRow.cs  WavEntry.cs
windows-native/WingMultitrackRenamer.Windows/Services/: RenamerCore.cs  RenamerException.cs
windows-native/WingMultitrackRenamer.Windows/ViewModels/: BindableBase.cs  MainViewModel.cs  RelayCommand.cs
windows-win32/: CMakeLists.txt
windows-win32/src/: main.cpp
